--- a/packages/app-andrew/src/pages/user/styles.scss
+++ b/packages/app-andrew/src/pages/user/styles.scss
@@ -1,10 +1,26 @@
 @import '~@gtms/styles/scss/variables.scss';
+@import '~@gtms/styles/scss/mixins/imageCover.scss';
 @import '~@gtms/styles/scss/mixins/pageWrapper.scss';
 
 .pageWrapper {
   @include pageWrapper();
 
   .wrapper {
+    position: relative;
     padding: 15px;
+    z-index: 1;
+    max-width: 700px;
+    border-radius: $borderRadius2;
+    background: rgba($theme2, 0.9);
+  }
+
+  .pageBg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    @include imageCover();
+    background-image: url('/images/temp-images/login-bg-2.png');
   }
 }
