--- a/packages/styles/scss/global.scss
+++ b/packages/styles/scss/global.scss
@@ -12,6 +12,14 @@ html {
 *:after {
   box-sizing: inherit;
 }
+html,
+body,
+body > div:first-of-type {
+  height: 100%;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
 
 body,
 input,
@@ -28,12 +36,6 @@ body {
   @include font-weight(semiNormal);
   line-height: normal;
   background-color: $theme1;
-}
-
-body > div:first-of-type {
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
 }
 
 textarea {
